--- a/gestion-mercado/src/app/pages/pedido-pages/pedidos-list/pedidos-list.html
+++ b/gestion-mercado/src/app/pages/pedido-pages/pedidos-list/pedidos-list.html
@@ -1,4 +1,11 @@
-<section class="list-container">
+<div class="list-container">
+
+  <select (change)="onTipoChange($event)">
+  <option value="">Todos</option>
+  <option value="VENTA">Venta</option>
+  <option value="COMPRA">Compra</option>
+</select>
+
   <div class="botones">
     <button type="button" class="btn-agregar" routerLink="/menu/pedidos/form"> Registrar PEDIDO </button>
   </div>
@@ -17,7 +24,7 @@
     </thead>
 
     <tbody class="tablaBody">
-      @for (pedido of pedidos(); track $index){
+      @for (pedido of pedidosFiltrados(); track $index){
         <tr>
           <td>{{ pedido.pedidoId }}</td>
           <td>{{ pedido.transaccion.transaccion_id}}</td>
@@ -37,4 +44,4 @@
     </tbody>
 
   </table>
-</section>
+</div>
