--- a/gestion-mercado/src/app/components/header/header.html
+++ b/gestion-mercado/src/app/components/header/header.html
@@ -33,11 +33,15 @@
               <p>Ver perfil</p>
               <span>></span>
             </div>
-            <div>
+
+            <button (click)="cerrarSesion()">
+              <div>
               <span class="material-symbols-outlined">logout</span>
               <p>Cerrar Sesión</p>
               <span>></span>
             </div>
+            </button>
+
           </div>
         </div>
       </div>
