--- a/gestion-mercado/src/app/pages/acceso-denegado-pages/acceso-denegado/acceso-denegado.html
+++ b/gestion-mercado/src/app/pages/acceso-denegado-pages/acceso-denegado/acceso-denegado.html
@@ -2,6 +2,13 @@
   <h1>Acceso denegado</h1>
   <p>No tenés permisos para ver esta sección.</p>
 
-  <a routerLink="/menu">Volver al menú</a>
-  <a routerLink="/login" style="margin-left: 1rem;">Cerrar sesión e iniciar con otra cuenta</a>
+
+  <button (click)="menu()">
+    <a routerLink="/menu">Volver al menú</a>
+  </button>
+
+  <button (click)="cerrarSesion()">
+     <a routerLink="/login" style="margin-left: 1rem;">Cerrar sesión e iniciar con otra cuenta</a>
+  </button>
+
 </div>
