Eliminamos crear persona
no se pueden crear personas,solo editar

--- a/gestion-mercado/src/app/pages/inventario-pages/inventarios-form/inventarios-form.html
+++ b/gestion-mercado/src/app/pages/inventario-pages/inventarios-form/inventarios-form.html
@@ -1,6 +1,6 @@
 <div class="form-container">
   <div class="card">
-    <h2>{{ isEditMode() ? 'Editar Inventario' : 'Registrar Inventario' }}</h2>
+    <h2>Editar inventario</h2>
 
     <form [formGroup]="form" (ngSubmit)="saveInventario()">
       <div class = "campo">
