--- a/gestion-mercado/src/app/pages/persona-pages/persona-form/persona-form.html
+++ b/gestion-mercado/src/app/pages/persona-pages/persona-form/persona-form.html
@@ -1,6 +1,6 @@
 <div class="form-container">
   <div class="card">
-    <h2>{{isEditMode() ? 'Editar Persona' : 'Registrar Persona'}}</h2>
+    <h2>Editar persona</h2>
 
     <form [formGroup]="form" (ngSubmit)="savePersona()">
       <!-- Campo Nombre -->
