--- a/gestion-mercado/src/app/styles/form-style.scss
+++ b/gestion-mercado/src/app/styles/form-style.scss
@@ -72,6 +72,7 @@
   input[type="email"],
   input[type="password"],
   input[type="date"],
+  input[type="url"],
   select {
     padding: 1rem 1.25rem;
     border: 2px solid rgba(255, 197, 208, 0.3);
