--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -25,7 +25,7 @@
          <li class="card" id="duenios">
         <a routerLink="/menu/duenios"> <div class="recuadro"></div>
         <div class="icon-container">
-          <img class="icon" src="" alt="duenio-icon" />
+          <img class="icon" src="/assets/images/duenio-icon.png" alt="duenio-icon" />
           <p> DUENIOS </p>
         </div>
         </a>
@@ -38,7 +38,7 @@
         <li class="card" id="empleados">
         <a routerLink="/menu/empleados"> <div class="recuadro"></div>
         <div class="icon-container">
-          <img class="icon" src="" alt="duenio-icon" />
+          <img class="icon" src="/assets/images/empleado-icon.png" alt="duenio-icon" />
           <p> EMPLEADOS </p>
         </div>
          </a>
@@ -51,7 +51,7 @@
         <li class="card" id="clientes">
         <a routerLink="/menu/clientes"> <div class="recuadro"></div>
         <div class="icon-container">
-          <img class="icon" src="" alt="duenio-icon" />
+          <img class="icon" src="/assets/images/clientes-icon.png" alt="duenio-icon" />
           <p> CLIENTES </p>
         </div>
          </a>
@@ -62,7 +62,7 @@
          <li class="card" id="proveedores">
         <a routerLink="/menu/proveedores"> <div class="recuadro"></div>
         <div class="icon-container">
-          <img class="icon" src="" alt="duenio-icon" />
+          <img class="icon" src="/assets/images/proveedor-icon.png" alt="duenio-icon" />
           <p> Proveedores </p>
         </div>
          </a>
@@ -91,7 +91,6 @@
         <div class="icon-container">
           <img class="icon" src="/assets/images/productos-icon.png" alt="producto-icon" />
           <p> PRODUCTOS  </p>
-          <p>(cambiar imagen👍)</p>
         </div>
         </a>
       </li>
@@ -103,7 +102,7 @@
         <li class="card" id="lotes">
         <a routerLink="/menu/lotes"> <div class="recuadro"></div>
         <div class="icon-container">
-          <img class="icon" src="/assets/images/lotes-icon.png" alt="lote-icon" />
+          <img class="icon" src="/assets/images/lote-icon.png" alt="lote-icon" />
           <p> LOTES </p>
         </div>
         </a>
@@ -116,7 +115,7 @@
         <li class="card" id="inventarios">
         <a routerLink="/menu/inventarios"> <div class="recuadro"></div>
         <div class="icon-container">
-          <img class="icon" src="/assets/images/inventarios-icon.png" alt="inventarios-icon" />
+          <img class="icon" src="/assets/images/inventario-icon.png" alt="inventarios-icon" />
           <p> INVENTARIOS </p>
         </div>
         </a>
@@ -172,7 +171,7 @@
          <li class="card" id="pedidos">
         <a routerLink="/menu/pedidos"> <div class="recuadro"></div>
         <div class="icon-container">
-          <img class="icon" src="/assets/images/pedidos-icon.png" alt="pedido-icon" />
+          <img class="icon" src="/assets/images/pedido-icon.png" alt="pedido-icon" />
           <p> PEDIDOS  </p>
         </div>
         </a>
