--- a/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
+++ b/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
@@ -2,8 +2,13 @@
   <div class="botones">
     <select (change)="atributo.set($any($event.target).value)">
       <option value="nombre">Nombre</option>
-      <option value="dni">Edad</option>
-      <option value="edad">Dni</option>
+      <option value="edad">Edad</option>
+      <option value="dni">DNI</option>
+    </select>
+
+    <select (change)="orden.set($any($event.target).value)">
+      <option value="asc">A - Z</option>
+      <option value="desc">Z - A</option>
     </select>
 
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
