--- a/gestion-mercado/src/app/pages/proveedor-pages/proveedores-list/proveedores-list.html
+++ b/gestion-mercado/src/app/pages/proveedor-pages/proveedores-list/proveedores-list.html
@@ -7,6 +7,11 @@
       <option value="edad">Edad</option>
     </select>
 
+    <select (change)="orden.set($any($event.target).value)">
+      <option value="asc">A - Z</option>
+      <option value="desc">Z - A</option>
+    </select>
+
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
 
