--- a/gestion-mercado/src/app/pages/usuarios-pages/usuarios-list/usuarios-list.html
+++ b/gestion-mercado/src/app/pages/usuarios-pages/usuarios-list/usuarios-list.html
@@ -1,12 +1,19 @@
 <section class="list-container">
   <div class="botones">
-    <button type="button" class="btn-agregar" routerLink="/menu/usuarios/form"> Agregar </button>
+    <button type="button" class="btn-agregar" routerLink="/menu/usuarios/form">Agregar</button>
+
     <select (change)="atributo.set($any($event.target).value)">
       <option value="email">Email</option>
     </select>
 
+    <select (change)="orden.set($any($event.target).value)">
+      <option value="asc">A - Z</option>
+      <option value="desc">Z - A</option>
+    </select>
+
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
+
 
   <table class="tabla">
     <thead class="encabezado">
