Menu, Menu header y login
- Ajustes menu header css
Menu header completado:
- Ahora muestra el nombre de la persona, realizando dos peticiones http.

- Menu muestra el rol actual
- Fix minimos del login
- Eliminado archivo JS

--- a/gestion-mercado/src/app/auth/login-layout/login-layout.html
+++ b/gestion-mercado/src/app/auth/login-layout/login-layout.html
@@ -16,7 +16,9 @@
       <button type="submit" class="btn-add">Ingresar</button>
 
       <!-- Mensaje de error -->
-      <p class="error" *ngIf="errorMsg">{{ errorMsg }}</p>
+      @if (errorMsg!='') {
+        <p class="error">{{ errorMsg }}</p>
+      }
     </form>
   </div>
 </div>
