--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -1,9 +1,5 @@
 <main class="contenido">
-  <h2>MENÚ DE ADMIN</h2>
-  <div class="breadcrumb">
-    <p>MENÚ > (hacer breacrumb)</p>
-  </div>
-  <p>(poner un if q printee el tipo de rol actual)</p>
+  <h2>MENÚ DE {{auth.getRole()}}</h2>
   <nav class="menus-container">
     <ul class="menus">
 
